--- a/style/css/all.css
+++ b/style/css/all.css
@@ -1554,15 +1554,23 @@
 
 @media screen and (max-width: 768px) {
   .video_item {
-    width: 85%;
+    width: auto;
+    margin-right: 10px;
   }
 }
 
 .video_play {
   position: relative;
-  width: 835.55px;
+  width: 900px;
   height: 470px;
   margin: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .video_play {
+    width: 590px;
+    height: 350px;
+  }
 }
 
 .video_play > iframe {
@@ -1570,9 +1578,8 @@
   top: 0;
   left: 0;
   right: 0;
+  bottom: 0;
   margin: auto;
-  width: 90%;
-  height: 100%;
 }
 
 .video_title {
