--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -23,6 +23,7 @@
 		border: 2px solid #FFB057;
 		margin: 0 5px;
 		line-height: 1;
+		cursor: pointer;
 	}
 	.on{
 		background: #FFB057;
@@ -218,6 +219,7 @@
 		position: relative;
 		width: 50px;
 		height: 40px;
+		cursor: pointer;
 	}
 	.menu_btn::before{
 		content:'';
@@ -325,6 +327,7 @@
 		}
 		.menu ul{
 			flex-wrap: wrap;
+			align-content: flex-start;
 		}
 		.menu li{
 			width: 100%;
@@ -1171,8 +1174,8 @@
 		flex: none;
 		width: 100%;
 		@include w768px{
-			width: auto;
-			margin-right: 10px;
+			width: 85%;
+			margin-right: 20px;
 		}
 	}
 	&_play{
@@ -1181,8 +1184,9 @@
 		height: 470px;
 		margin: auto;
 		@include w768px{
-			width: 590px;
-			height: 350px;
+			width: auto;
+			height: auto;
+			padding-bottom: calc(100% * (9 / 16));
 		}
 		>iframe{
 			position: absolute;
@@ -1219,11 +1223,17 @@
 		width: 100%;
 		max-width: 976px;
 		margin: 0 auto 40px;
+		li{
+			cursor: pointer;
+			display: flex;
+		}
 		li+li{
 			margin-top: 20px;
 		}
 	}
 	.news_date{
+		width: 185px;
+		flex: none;
 		color: $primary_color;
 		font-weight: bold;
 		font-size: 24px;
@@ -1344,6 +1354,7 @@
 			text-align: center;
 			line-height: 85px;
 			border-radius: 10px;
+			cursor: pointer;
 		}
 	}
 	@include w768px{
@@ -1489,6 +1500,7 @@
 		background: #FFB057;
 		top: 20px;
 		right: 35px;
+		cursor: pointer;
 		@include w768px{
 			width: 45px;
 			height: 45px;
@@ -1512,4 +1524,13 @@
 			transform: rotate(-45deg);
 		}
 	}
+}
+.scroll_top{
+	position: fixed;
+	width: 80px;
+	height: 80px;
+	background: url("../../images/icon_gototop.svg")no-repeat center/contain;
+	right: 80px;
+	bottom: 80px;
+	cursor: pointer;
 }
