--- a/style/css/all.css
+++ b/style/css/all.css
@@ -577,7 +577,7 @@
   position: relative;
   width: 100%;
   height: calc( 100vh - 70px);
-  background: url("../../images/banner_bg.jpg") no-repeat center/cover;
+  background: url("../../images/banner_bg.jpg") no-repeat 80% bottom/cover;
 }
 
 .banner .banner_info {
