--- a/style/css/all.css
+++ b/style/css/all.css
@@ -310,20 +310,19 @@
   width: 100%;
   height: 80px;
   color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   font-size: 45px;
   font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  line-height: 1px;
 }
 
 .title:before {
@@ -549,8 +548,8 @@
 
 @media screen and (max-width: 768px) {
   .header .logo {
-    width: 85px;
-    height: 30px;
+    width: 141px;
+    height: 50px;
   }
   .header .menu_btn {
     width: 25px;
