--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -172,12 +172,11 @@
 	width: 100%;
 	height: 80px;
 	color: $whtie;
-	display: flex;
-	align-items: center;
 	font-size: 45px;
 	font-weight: bold;
 	@include flex_c_c;
 	text-shadow: 0 4px 4px rgba(0,0,0,.25);
+	line-height: 1px;
 	&:before{
 		content:'';
 		width: 44px;
@@ -354,8 +353,8 @@
 	}
 	@include w768px{
 		.logo{
-			width: 85px;
-			height: 30px;
+			width: 141px;
+			height: 50px;
 		}
 		.menu_btn{
 			width: 25px;
