--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -340,6 +340,7 @@
 			width: 100%;
 			color: #fff;
 			justify-content: center;
+			font-size: 30px;
 		}
 		.menu li:hover{
 			color: #fff;
@@ -357,7 +358,7 @@
 			height: 50px;
 		}
 		.menu_btn{
-			width: 25px;
+			width: 30px;
 			height: 25px;
 		}
 		.menu_btn:before{
@@ -381,7 +382,7 @@
 	position: relative;
 	width: 100%;
 	height: calc( 100vh - 70px);
-	background: url('../../images/banner_bg.jpg')no-repeat 80% bottom/cover;
+	background: url('../../images/banner_bg.jpg')no-repeat center/cover;
 	.banner_info{
 		@include absolute(80px ,0,0,170px);
 		.pic{
@@ -476,8 +477,9 @@
 		}
 	}
 	@include w768px{
+		background-image: url('../../images/banner_ph_bg.png');
 		.banner_info{
-			top: 30px;
+			top: 60px;
 			bottom: 0;
 			left: 0;
 			right: 0;
@@ -485,24 +487,28 @@
 			padding: 0 20px;
 			.pic{
 				margin: auto;
-				width: 230px;
+				width: 130px;
 			}
 		}
 		.banner_txt{
 			text-align: center;
 			.p1{
 				margin-top: 22px;
-				font-size: 32px;
+				font-size: 28px;
+			}
+			.s1{
+				font-size: 28px;
 			}
 			.p2{
 				display: inline-block;
 				margin-top: 30px;
+				margin-right: 50px;
 				text-align: left;
-				font-size: 24px;
-
+				font-size: 16px;
+				
 			}
 			.s2{
-				font-size: 70px;
+				font-size: 40px;
 			}
 			.br_768{
 				margin-top: 10px;
@@ -510,7 +516,7 @@
 		}
 		.banner_scoll{
 			bottom: 26%;
-			font-size: 28px;
+			font-size: 18px;
 			&::after{
 				width: 30px;
 				margin: 10px auto 0;
@@ -666,12 +672,12 @@
 		font-weight: 500px;
 		margin: 0 auto 20px;
 	}
-
 	.mod_dots{
 		display: none;
 	}
 
 	@include w768px{
+		background: url('../../images/flyer/bg_ph_flyer.png') right bottom / cover;
 		.info_box{
 			padding: 25px 0 0 0;
 		}
@@ -737,6 +743,8 @@
 
 	@include w768px{
 		background-size: cover;
+		background-image: url('../../images/leaderboard/bg_ph_leaderboard_l.png');
+		
 		.leaderboard_box{
 			ul{
 				overflow-x: auto;
@@ -832,20 +840,20 @@
 						padding: 11px 0;
 					}
 					&:after{
-						content:'\25BA';
+						content:'';
 						position: absolute;
 						left: calc(100% + 10px);
 						width: 18px;
 						height: 18px;
-						font-size: 16px;
+						background: url('../../images/icon_triangle.svg')no-repeat center/contain;
 						top: 0;
 						bottom: 0;
 						margin: auto 0;
-						color: #FFB057;
 						transition-duration: .3s;
+						transform: rotate(-90deg);
 					}
 					&.active:after{
-						transform: rotate(90deg);
+						transform: rotate(0deg);
 					}
 				}
 			}
@@ -881,7 +889,7 @@
 					padding: 0;
 				}
 				>span{
-					padding: 10px 0;
+					padding: 15px 0;
 					display: block;
 					width: 100%;
 				}
@@ -924,7 +932,7 @@
 				justify-content: center;
 				align-items: flex-end;
 				background: $primary_color;
-				padding: 25px 30px;
+				padding: 20px 30px;
 				font-size: 30px;
 				font-weight: bold;
 				&:after{
@@ -1172,6 +1180,7 @@
 		padding-right: 15px;
 		@include w768px{
 			padding-bottom: 25px;
+			background-image: url('../../images/video/bg_ph_video.jpg');
 		}
 	}
 	&_box{
