--- a/style/css/all.css
+++ b/style/css/all.css
@@ -925,6 +925,8 @@
   text-align: center;
   font-weight: 500px;
   margin: 0 auto 20px;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 }
 
 .flyer .mod_dots {
