--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -671,6 +671,7 @@
 		text-align: center;
 		font-weight: 500px;
 		margin: 0 auto 20px;
+		transform: translate3d(0 , 0 ,0);
 	}
 	.mod_dots{
 		display: none;
